# ECS

./: .gitignore  CMakeLists.txt  README.html  README.html~  README.md  README.md~  ecs.hpp  ecsmanager.hpp  entity.hpp  perfdebug.sh  system.hpp  typelist.hpp
include/: basesystem.hpp  cesmanager.hpp  component.hpp  ecsmanager.hpp  entity.hpp  system.hpp  typelist.hpp
src/: cesmanager.cpp  component.cpp  ecsmanager.cpp  entity.cpp  main.cpp
tests/: CMakeLists.txt  build_tests.sh  test_entity.cpp
